--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,26 @@
 <resources>
 	<string name="app_name">FileOnFire</string>
+
+    <!-- MainFragment -->
+
+    <!-- TextView -->
+    <string name="actual_size">Actual size: %dMB</string>
+    <string name="compressed_size">Compressed size: %dMB</string>
+
+    <!-- Buttons -->
+    <string name="load_convert_upload_image">Load, convert, and upload images</string>
+    <string name="load_convert_upload_video">Load, convert and upload video</string>
+
+    <!-- Toasts -->
+    <string name="failed_open_picture">Failed to open a picture</string>
+
+    <!-- Content descriptions -->
+    <string name="original_image_to_compare">First image to compare</string>
+    <string name="compressed_image_to_compare">Second image to compare</string>
+
+
+    <!-- Gallery -->
+
+    <!-- Content descriptions -->
+    <string name="gallery_image">Gallery image</string>
 </resources>
